tests/compile-errors/ce-closure-type-check.valk

fn main() {
    let x : Fn(int)() = fn(x: int) {} 
}
